# conf_reader

./: CMakeLists.txt  Conf.conf  Conf_2.conf  a.out  conf_reader  conf_reader.rar  main.c  make.sh
Includes/: conf.h  conf_reader.h  list.h  structures.h
Sources/: check_file.c  check_uniq.c  conf.c  conf.h  conf_help.c  conf_reload.c  create.c  create_2.c  create_3.c  create_env.c  create_job.c  ft.c  ft_2.c  ft_strsplit.c  get_nl.c  list.c  list_2.c  main.c  str.c  task_delete.c
conf_reader.dSYM/Contents/: Info.plist
conf_reader.dSYM/Contents/Resources/DWARF/: conf_reader
